# arise-status

./: .env.example  .gitignore  Cargo.toml  README.md  example.arise.service  start.sh  toolchain.toml
src/: alive.rs  main.rs  version.rs
