[package]
name = "arise-status"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = { version = "0.4.26", features = ["kv_serde"] }
reqwest = "0.12.12"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
