[package]
name = "arise-status"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
anyhow = "1.0.96"
dotenv = "0.15.0"
log = { version = "0.4.26", features = ["kv_serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
